--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap');
 
-*,
+/* *,
 *::after,
 *::before {
   margin: 0;
@@ -17,4 +17,82 @@ body {
   padding: 0;
   margin: 0;
   background-color: #f4f4f4;
+} */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 16px;
+}
+
+body {
+  font-family: 'Poppins', sans-serif;
+  display: flex;
+  justify-content: center;
+  background: url(../minionbg.jpg) center no-repeat;
+  background-size: cover;
+  height: 100vh;
+}
+
+header {
+  padding: 1rem 2rem;
+  background-color: #14f1e6;
+  color: #fff;
+}
+
+section {
+  margin: 5rem 0;
+}
+
+textarea {
+  margin: 2rem 0;
+  display: block;
+  width: 100%;
+  padding: 2rem;
+  height: 8rem;
+  resize: none;
+  color: #1c2042;
+}
+
+button {
+  background-color: #14f1e6;
+  color: #fff;
+  padding: 10px 25px;
+  display: block;
+  width: 100%;
+  font-size: 1.2rem;
+  font-weight: 500;
+  cursor: pointer;
+  transition: all 0.5s ease;
+}
+
+button:hover,
+button:active {
+  transform: scale(1.05);
+}
+
+.output {
+  margin-top: 2rem;
+  text-align: center;
+}
+
+.output h4 {
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin-bottom: 2rem;
+}
+
+.output-container {
+  width: 100%;
+  height: 20vh;
+  border: 2px solid #031ee9f8;
+  margin: 2rem 0;
+  padding: 2rem;
+  text-align: left;
+  font-size: 1.2rem;
+  font-weight: 600;
 }
